swiper align fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -610,10 +610,10 @@ img {
 }
 
 .swiper-button-prev {
-	left: -0.5rem;
+	left: -0.2rem !important;
 }
 .swiper-button-next {
-	right: -0.5rem;
+	right: -0.2rem !important;
 }
 
 .swiper-pagination {
